package model;

public enum Direction {
    NORTH,EAST,WEST,SOUTH,NORTHEAST,NORTHWEST,SOUTHEAST,SOUTHWEST;
}
